--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "nuxt typecheck",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "type-check": "nuxt typecheck"
   },
   "dependencies": {
     "@nuxt/fonts": "^0.12.1",
@@ -24,11 +22,10 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.13.0",
-    "@vitejs/plugin-vue": "^6.0.3",
-    "@vitest/ui": "^4.0.18",
-    "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^20.4.0",
-    "unplugin-auto-import": "^21.0.0",
-    "vitest": "^4.0.18"
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
