--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,10 @@ jobs:
           cache: 'pnpm'
 
 
-      - name: Install pnpm
+      - name: Install pnpm and add to PATH
         run: |
           npm install -g pnpm
-          echo "PNPM path: $(npm bin -g)"
-        shell: bash
-
-      - name: Add pnpm to PATH
-        run: echo "$(npm bin -g)" >> $GITHUB_PATH
+          echo "$(npm bin -g)" >> $GITHUB_PATH
         shell: bash
 
       - name: Make scripts executable
