--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,10 @@ jobs:
           cache: 'pnpm'
 
 
-      - name: Install pnpm and add to PATH
-        run: |
-          npm install -g pnpm
-          echo "$(npm bin -g)" >> $GITHUB_PATH
-        shell: bash
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Make scripts executable
         run: chmod +x deliverables/lab02/lab2.sh
