--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
+        
+      - name: Install pnpm
+        run: npm install -g pnpm@10
 
       - name: Setup Node.js
         uses: actions/setup-node@v6
@@ -14,10 +17,8 @@ jobs:
           cache: 'pnpm'
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v3.0.0
-        with:
-          version: 10
-          run_install: false
+        uses: pnpm/action-setup@v4
+
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
