--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,26 +5,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
-        
-      - name: Install pnpm
-        run: npm install -g pnpm@10
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
 
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Type check
-        run: pnpm tsc --noEmit
+        run: pnpm typecheck
 
       - name: Lint
         run: pnpm lint
@@ -36,14 +36,14 @@ jobs:
         run: pnpm test
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@v4
         with:
           name: build
-          path: dist/
+          path: .output/
 
       - name: Test built package (preview)
         run: |
-          pnpm start &
+          pnpm preview &
           sleep 10
           curl -f http://localhost:3000 || (echo 'App preview failed' && exit 1)
         env:
