--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           name: build
           path: .output/
+          include-hidden-files: true
 
       - name: Test built package (preview)
         run: |
