--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,11 +3,11 @@ name: CI
 
 on:
   push:
-    branches: [main, lab4/**]
+    branches: [main, lab4]
     paths-ignore:
       - 'docs/**'
   pull_request:
-    branches: [main, lab4/**]
+    branches: [main, lab4]
     paths-ignore:
       - 'docs/**'
   workflow_dispatch:
