removed lint from pipeline

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,31 +36,9 @@ jobs:
       - name: Type checking
         run: pnpm typecheck
 
-  lint:
-    name: Static analysis
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: 22
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Lint
-        run: pnpm lint
-
   build-and-test:
     name: Build, test & publish artifact
-    needs: [typecheck, lint]
+    needs: [typecheck]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
