--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,14 @@ jobs:
         with:
           name: 2048-app-build
           path: .output/
+          retention-days: 7
+      - name: Upload build artifact for non-main branches
+        if: github.event_name == 'push' && github.ref != 'refs/heads/main'
+        uses: actions/upload-artifact@v6
+        with:
+          name: 2048-app-build
+          path: .output/
+          retention-days: 1
 
   lint:
     name: Lint
